Add UserInterfaceHandler to manage UI interactions and roof vision fade functionality

--- a/styles/foundryvtt-over-my-head.css
+++ b/styles/foundryvtt-over-my-head.css
@@ -1,8 +1,8 @@
 
-.over-my-head-also-fade {
+.foundryvtt-over-my-head-also-fade {
     display: none !important;
 }
 
-.over-my-head-also-fade.active {
+.foundryvtt-over-my-head-also-fade.active {
     display: flex !important;
 }
